# energy-feature-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
docs/: data_sources.md  decisions.md  methodology.md
energy_features/: __init__.py  calendar.py  data_loader.py  lags.py  solar.py  thermal.py  weather.py  wind.py
notebooks/: 01_calendar_lag_baseline.ipynb  02_wind_features_demo.ipynb  03_era5_vs_nwp.ipynb
scripts/: check_docs_updated.py  download_era5.py  download_nwp_forecast.py
tests/: __init__.py  conftest.py  test_calendar.py  test_data_loader.py  test_lags.py  test_solar.py  test_thermal.py  test_weather.py  test_wind.py
