[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-feature-pipeline"
version = "0.1.0"
description = "Calendar, lag, and weather features for renewable generation forecasting (OPSD, ERA5, NWP)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "energy-feature-pipeline contributors" }]
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "feature-engine>=1.7",
    "holidays>=0.40",
    "pvlib>=0.11",
    "windpowerlib>=0.2",
    "xarray>=2024.5",
    "netCDF4>=1.7",
    "cdsapi>=0.7",
    "herbie-data>=2024.7",
    "lightgbm>=4.3",
    "matplotlib>=3.8",
    "pyarrow>=15",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
    "ruff>=0.6",
    "nbstripout>=0.8",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["energy_features*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["energy_features", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: downloads or heavy IO (opt-in)",
]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["energy_features"]
omit = [
    "energy_features/wind.py",
    "energy_features/weather.py",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = false
